[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ui/menus/pause_screen.gd" type="Script" id=1]
[ext_resource path="res://textures/paused.png" type="Texture" id=2]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=3]

[node name="pause_screen" type="CanvasLayer"]
pause_mode = 2
layer = 80
script = ExtResource( 1 )

[node name="color_rect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="paused" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
texture = ExtResource( 2 )

[node name="vbox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = 30.0
margin_right = 45.5
margin_bottom = 110.0
theme = ExtResource( 3 )
custom_constants/separation = 10

[node name="button_resume" type="Button" parent="vbox"]
margin_right = 91.0
margin_bottom = 20.0
text = "Resume"

[node name="button_restart" type="Button" parent="vbox"]
margin_top = 30.0
margin_right = 91.0
margin_bottom = 50.0
text = "Restart"

[node name="button_back_to_menu" type="Button" parent="vbox"]
margin_top = 60.0
margin_right = 91.0
margin_bottom = 80.0
text = "Back to Title"
[connection signal="pressed" from="vbox/button_resume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="vbox/button_restart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="vbox/button_back_to_menu" to="." method="_on_button_back_to_menu_pressed"]
